created mobile header navbar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   
   <header>
 
-    <nav>
-      <img src="images/Newsweek.png" alt="logo-new-week">
+    <nav class="navbar nav-justified">
+      <img class="header-logo" src="images/Newsweek.png" alt="logo-new-week">
       <div>
         <a href="#"><i class="fas fa-user"></i></a>
-        <button>SUBSCRIPTION OFFERS</button>
+        <button type="button" class="btn-warning">SUBSCRIPTION OFFERS ></button>
         <a href="#"><i class="fas fa-bars"></i></a>
       </div>
     </nav>
