added style for two more-stories section and my turn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <header>
 
-    <nav class="navbar nav-justified">
+    <nav class="navbar bg-red-news nav-justified">
       <img class="header-logo" src="images/Newsweek.png" alt="logo-new-week">
       <div class="d-flex align-items-center">
         <a href="#"><i class="fas fa-user"></i></a>
@@ -92,7 +92,7 @@
 
         <h1 class="story-h1">THE DEBATE</h1>
         <div class="media mt-2 mb-2 mr-2 pt-3 border-top-gross">
-          <img class="mr-2"src="images/debate-images-1.png" alt="profile-pic">
+          <img class="mr-2" src="images/debate-images-1.png" alt="profile-pic">
           <div class="media-body mt-1">
             <a class="black-font-medium" href="#">The Case for Amy Coney Barrett</a>
             <p>By Robert P. George</p>
@@ -198,11 +198,11 @@
         </div>  
       </article>
 
-      <div class="mb-4 mt-4">
-       <form action="/">
-         <label for="sign-up"><img src="/images/in-the-magazine-small-logo.png" alt="news week small logo">Start your day with our top 5 articles</label>
-         <input type="text" placeholder="Email adress" id="sign-up">
-         <button type="submit">FREE SIGN UP</button>
+      <div class="mb-4 mt-4 ml-5 mr-5 border bg-light">
+       <form class="d-flex flex-column align-items-center p-4 text-center" action="/">
+          <label for="sign-up" class="black-font-big"><img  src="/images/in-the-magazine-small-logo.png" alt="news week small logo">START YOUR DAY WITH OUT OP 5 ARTICLES</label>
+         <input class="w-75 border-light" type="text" placeholder="Email adress" id="sign-up">
+         <button class="bg-red-news text-white rounded-sm border-0 w-75 mt-2 text-form-size" type="submit">FREE SIGN UP ></button>
        </form>
       </div>
 
@@ -252,114 +252,119 @@
     =            Section MORE STORIES           =
     =============================================*/ -->
 
-    <section>
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+    <section class="mr-3 ml-3 mt-3">
+      <h1 class="story-h1">MORE STORIES</h1>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
 
-      <article>
-        <img src="images/more-stories.png" alt="more-stories-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border-top pt-3">
+        <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
+        <a href="#" class="font-title-more-stories" >Switzerland: Innovation Against the Pandemic</a>
+        <p class="font-p-more-stories mt-3">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
       </article>
+
     </section>
+
+     
 
     <!-- /*=============================================
     =            Section MY TURN          =
     =============================================*/ -->
 
-    <section>
-      <h1>MY TURN</h1>
+    <section class="mr-3 ml-3 mt-3">
+      <h1 class="story-h1">MY TURN</h1>
       <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
+        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
       </div>
 
       <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
+        <a href="#"><img class="d-block w-100 mb-2 mt-4" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
       </div>
 
       <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
+        <a href="#"><img class="d-block w-100 mb-2 mt-4" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
+      </div>
+
+      <h1 class="story-h1">CULTURE & TRAVEL</h1>
+      <div>
+        <a href="#"><img class="d-block w-100 mb-2 mt-4" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
       </div>
 
       <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
+        <a href="#"><img class="d-block w-100 mb-2 mt-4" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
       </div>
 
       <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
-      </div>
-
-      <div>
-        <a href="#"><img src="" alt=""></a>
-        <a href="#">1We Live In A Two Storey Undergrouond Bunker'</a>
+        <a href="#"><img class="d-block w-100 mb-2 mt-4" src="/images/my-turn-img-1.png" alt=""></a>
+        <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
       </div>
 
     </section>
@@ -368,41 +373,61 @@
     =            Section SPONSORS           =
     =============================================*/ -->
 
-    <section>
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+    <section class="mr-3 ml-3 mt-3">
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Leaders in Global Education 2020</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <div class="mb-4 mt-4 ml-5 mr-5 border bg-light">
+       <form class="d-flex flex-column align-items-center p-4 text-center" action="/">
+          <label for="sign-up" class="black-font-big"><img  src="/images/in-the-magazine-small-logo.png" alt="news week small logo">START YOUR DAY WITH OUT OP 5 ARTICLES</label>
+         <input class="w-75 border-light" type="text" placeholder="Email adress" id="sign-up">
+         <button class="bg-red-news text-white rounded-sm border-0 w-75 mt-2 text-form-size" type="submit">FREE SIGN UP ></button>
+       </form>
+      </div>
+
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
-      <article>
-        <img src="images/sponsored-img-1.png" alt="sponsored-pic">
-        <a href="#">Switzerland: Innovation Against the Pandemic</a>
-        <p>Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+      <article class="border">
+        <a href="#"><img class="mb-3 w-100" src="images/sponsored-img-1.png" alt="sponsored-pic"></a>
+        <div  class="ml-3">
+          <a class="black-font-big" href="#">Switzerland: Innovation Against the Pandemic</a>
+          <p class="small-font mr-4 mt-2 text-left">Could Switzerland, one of the world’s wealthiest and most innovative nations, hold the answers to the current global economic, social and health crisis?</p>
+        </div>  
       </article>
 
     </section>
