--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <!-- /*=============================================
     =            Section TOP STORY            
     =============================================*/ -->
-    <div class="container-fluid">
-    <div class="top-story-more-stories pt-4 row row-cols-2 order-2">
-      <section class="mr-3 ml-3 mt-3 top-story-section col-md-6 no-gutters w-100">
+    <div class="container w-100">
+    <div class="row">
+      <section class="col-12 col-md-6 order-2">
         <h1 class="story-h1">TOP STORY</h1>
         <article class="art-story">
           <div>
@@ -53,7 +53,7 @@
       <!-- /*=============================================
       =            Section FEATURED STORIES          
       =============================================*/ -->
-      <section class="mr-3 ml-3 mt-3 feature-stories col-md-4 no-gutters w-100 order-first">
+      <section class="col-12 col-md-6 order-1">
         <h1 class="story-h1">FEATURED STORIES</h1>
         <article class="art-story">
           <a href="#"><img class="w-100" src="images/putin-pic.png" alt="dolars-pic"></a>
@@ -91,7 +91,7 @@
         =            Section THE DEBATE           =
         =============================================*/ -->
         
-        <section  class="mr-3 ml-3 mt-3 col col-md-12 no-gutters w-100">
+        <section  class="col-12 col-md-12 order-4">
 
           <h1 class="story-h1">THE DEBATE</h1>
           <div class="media mt-2 mb-2 mr-2 pt-3 border-top-gross">
@@ -118,7 +118,7 @@
         =            Section OPINION           =
         =============================================*/ -->
 
-      <section class="mr-3 ml-3 mt-3">
+      <section class="col-12 col-md-6 order-5">
         
         <h1 class="story-h1">OPINION</h1>
 
@@ -255,7 +255,7 @@
       =            Section MORE STORIES           =
       =============================================*/ -->
 
-      <section class="mr-3 ml-3 mt-3 col-md-4 no-gutters w-100 order-last">
+      <section class="col-12 col-md-6 order-2">
         <h1 class="story-h1">MORE STORIES</h1>
         <article class="border-top pt-3">
           <img class="float-left mr-3 mb-1" src="images/more-stories.png" alt="more-stories-pic">
