added order in sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- /*=============================================
     =            Section TOP STORY            
     =============================================*/ -->
-    <div class="container w-100">
+    <div class="container">
     <div class="row">
       <section class="col-12 col-md-6 order-2">
         <h1 class="story-h1">TOP STORY</h1>
@@ -337,7 +337,7 @@
       =            Section MY TURN          =
       =============================================*/ -->
 
-      <section class="mr-3 ml-3 mt-3 col-sm-12 col-md-4 no-gutters w-100 order-last container-fluid">
+      <section class="col-12 col-md-6 order-md-3">
         <h1 class="story-h1">MY TURN</h1>
         <div class="row">
         
@@ -355,6 +355,8 @@
             <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-img-1.png" alt=""></a>
             <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
           </div>
+
+        </div>
 
           <h1 class="story-h1">CULTURE & TRAVEL</h1>
           <div class="row">
