addeds style to form

--- a/index.html
+++ b/index.html
@@ -454,13 +454,19 @@
               </div>
             </section>
 
-            <div class="bg-light">
-              <form class="d-flex flex-column align-items-center p-4 text-center" action="/">
-                  <label for="sign-up" class="black-font-big"><img  src="/images/in-the-magazine-small-logo.png" alt="news week small logo">START YOUR DAY WITH OUT OP 5 ARTICLES</label>
-                <input class="w-75 border-light" type="text" placeholder="Email adress" id="sign-up">
-                <button class="bg-red-news text-white rounded-sm border-0 w-75 mt-2 text-form-size" type="submit">FREE SIGN UP ></button>
-              </form>
-              </div>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="bg-light col-md-6 justify-content-md-center">
+                  <form class="d-flex flex-column align-items-center p-4 text-center" action="/">
+                      <label for="sign-up" class="black-font-big"><img  src="/images/in-the-magazine-small-logo.png" alt="news week small logo">START YOUR DAY WITH OUT OP 5 ARTICLES</label>
+                    <input class="w-75 border-light" type="text" placeholder="Email adress" id="sign-up">
+                    <button class="bg-red-news text-white rounded-sm border-0 w-75 mt-2 text-form-size" type="submit">FREE SIGN UP ></button>
+                  </form>
+                </div>
+                <div class="col-md-3"></div>
+              <div>  
+            </div>  
 
             </section>
           </div>   
