started header desktop version

--- a/index.html
+++ b/index.html
@@ -15,19 +15,49 @@
   
   <header>
 
-    <nav class="navbar bg-red-news nav-justified fixed-top">
-      <img class="header-logo" src="images/Newsweek.png" alt="logo-new-week">
+    <nav class="navbar bg-red-news nav-justified sticky-top d-flex justify-content-space-between">
+      <div class="text-white smaller-none big-show">
+        <div class="text-white">
+          <i class="fas fa-cloud-sun"></i>
+          <span>0°, Bespin City, BP ></span>
+        </div>
+       <p class="text-white">Mon, Oct 05, 2020</p>
+      </div>
+      <img class="header-logo w-lg-100" src="images/Newsweek.png" alt="logo-new-week">
       <div class="d-flex align-items-center">
         <a href="#"><i class="user-nav fas fa-user"></i></a>
         <span class="text-white font-weight-bolder login-nav">LOGIN</span>
         <button type="button" class="btn-warning">SUBSCRIBE<span class="offer-nav btn-warning">OFFERS</span>></button>
-        <a href="#"><i class="fas fa-bars"></i></a>
+        <a class="big-none" href="#"><i class="fas fa-bars"></i></a>
       </div>
     </nav>
 
     
-    <nav></nav>
-    <nav></nav>
+    <nav class="navbar navbar-expand">
+      <ul class="navbar-nav">
+      <li class="nav-item ml-2">U.S</li>
+      <li class="nav-item mr-2">World</li>
+      <li class="nav-item mr-2">Business</li>
+      <li class="nav-item mr-2">Tech & Science</li>
+      <li class="nav-item mr-2">Culture</li>
+      <li class="nav-item mr-2">Newsgeek</li>
+      <li class="nav-item mr-2">Sports</li>
+      <li class="nav-item mr-2">Health</li>
+      <li class="nav-item mr-2">The Debate</li>
+      <li class="nav-item mr-2">Vantage</li>
+      <li class="nav-item mr-2">Weather</li>
+    </ul>
+  </nav>
+    <nav>
+      <ul>
+        <li>TRENDING</li>
+        <li>DONALD TRUMP</li>
+        <li>JOE BIDEN</li>
+        <li>STIMULUS PACKAGE</li>
+        <li>CORONA VIRUS</li>
+        <li>2020 ELECTION</li>
+      </ul>
+    </nav>
   </header>
 
   <main class="pt-5">
