--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
-  <title>Document</title>
+  <title>Newsweek</title>
 </head>
 <body class="max-w-total mx-auto">
   
@@ -27,28 +27,34 @@
       <div class="d-flex align-items-center">
         <a href="#"><i class="user-nav fas fa-user"></i></a>
         <span class="text-white font-weight-bolder login-nav">LOGIN</span>
-        <button type="button" class="btn-warning">SUBSCRIBE<span class="offer-nav btn-warning">OFFERS</span>></button>
+        <button type="button" class="btn-warning text-black pl-2 pr-2 pt-1 pb-1">SUBSCRIBE ></span></button>
         <a class="big-none" href="#"><i class="fas fa-bars"></i></a>
       </div>
     </nav>
 
     
-    <nav class="smaller-none big-show navbar navbar-expand border-bottom pt-3 pb-3 nav-top-2">
+    <nav class="smaller-none big-show navbar navbar-expand border-bottom pt-3 pb-3 nav-top-2 position-relative">
       <ul class="navbar-nav">
-      <li class="nav-item ml-2 pr-2 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">U.S </a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">Business</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">World</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black d-inline" href="#">Tech & Science</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Culture</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Newsgeek</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Sports</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Health</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black d-inline" href="#">The Debate</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Vantage</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Weather</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Search</a></li>
-      <li class="nav-item mr-2 pr-2 mr-2 border-right"><i class="fas fa-search"></i></li>
+      <li class="nav-item ml-2 pr-3 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">U.S </a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">Business</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class=" text-decoration-none text-black" href="#">World</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black d-inline" href="#">Tech & Science</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Culture</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Newsgeek</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Sports</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Health</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black d-inline" href="#">The Debate</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2 border-right"><a class="text-decoration-none text-black" href="#">Vantage</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2"><a class="text-decoration-none text-black" href="#">Weather</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2"><a class="text-decoration-none text-secondary" href="#">Search</a></li>
+      <li class="nav-item mr-2 pr-3 mr-2"><i class="fas fa-search"></i></li>
     </ul>
+    <div class="rectangle bg-red-news position-absolute">
+
+    </div>
+    <div class="triangle  position-absolute">
+
+    </div>
   </nav>
     <nav class="smaller-none big-show navbar navbar-expand border-bottom pt-2 pb-2 nav-top-2">
       <ul class="navbar-nav">
@@ -148,12 +154,12 @@
                     <div class="row">
                       
                       <div class="col-md-4" >
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-img-1.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="./images/my-turn-img-1.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                       </div>
 
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-2.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="./images/my-turn-pic-2.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">'My Home Was Burned Down In The Oregon Fires''</a>
                       </div>
 
