fixed header issues

--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
                     <div class="row">
                       
                       <div class="col-md-4" >
-                        <a href="#"><img class="d-block w-100 mb-2" src="./images/my-turn-img-1.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-img-1.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                       </div>
 
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="./images/my-turn-pic-2.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-2.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">'My Home Was Burned Down In The Oregon Fires''</a>
                       </div>
 
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-3.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-3.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">I Had a Double Mastectomy, Covid-19 Has Prevented My Reconstructive Surgery'</a>
                       </div>
                     </div>
@@ -172,17 +172,17 @@
                     <h1 class="story-h1">CULTURE & TRAVEL</h1>
                     <div class="row">
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-3.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-3.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">100 Best Rock Albums of All Time, According to Critics'</a>
                       </div>
 
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-5.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-5.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">Plot an Escape Around the World With 'Accidentally Wes Anderson' </a>
                       </div>
 
                       <div class="col-md-4">
-                        <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-6.png" alt="small picture"></a>
+                        <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-6.png" alt="small picture"></a>
                         <a href="#" class="font-p-my-turn">50 Black Actors Who Made Entertainment History</a>
                       </div>
                     </div>
