added border bottom to OPINION section

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   
                   <h1 class="story-h1">OPINION</h1>
 
-                  <div class="media">
+                  <div class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">Yearning for an Independent Federal Judiciary </a>
@@ -314,7 +314,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">We Are Nurses, America's Most Trusted Profession. And We Support Biden </a>
@@ -322,7 +322,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img  src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">The United Nations: Erdogan's Favorite Platform for Trolling the World</a>
@@ -330,7 +330,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">Here's How the Democrats Can Flip the Script on Trump's SCOTUS Nomination </a>
@@ -338,7 +338,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">A Letter From an Abortion Provider to My Colleagues Fighting COVID-19 </a>
@@ -346,7 +346,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">Why Downplaying China's Election Interference Could Backfire </a>
@@ -354,7 +354,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">Americans Deserve a Better Debate </a>
@@ -362,7 +362,7 @@
                     </div>
                   </div>
 
-                  <div class="media">
+                  <div  class="media border-bottom pb-2 mt-2">
                     <img src="images/debate-images-1.png" alt="profile-pic">
                     <div class="ml-3 media-body">
                       <a class="black-font-medium" href="#">The World's Attention Is Drifting Away From Belarus. It's Far Too Soon</a>
