fixed linter errors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="d-flex align-items-center">
         <a href="#"><i class="user-nav fas fa-user"></i></a>
         <span class="text-white font-weight-bolder login-nav">LOGIN</span>
-        <button type="button" class="btn-warning text-black pl-2 pr-2 pt-1 pb-1">SUBSCRIBE ></span></button>
+        <button type="button" class="btn-warning text-black pl-2 pr-2 pt-1 pb-1">SUBSCRIBE ></button>
         <a class="big-none" href="#"><i class="fas fa-bars"></i></a>
       </div>
     </nav>
