fixed navbar in mobile version

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <header>
 
-    <nav class="fixed-top navbar bg-red-news nav-justified d-flex">
+    <nav class="fixed-sm-top navbar bg-red-news nav-justified d-flex w-100">
       <div class="text-white smaller-none big-show flex-column ">
         <div class="text-white secondary-font">
           <i class="fas fa-cloud-sun"></i>
