--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 =            Section OPINION           =
                 =============================================*/ -->
               
-                <section >
+                <section class="pt-3">
                   
                   <h1 class="story-h1">OPINION</h1>
 
@@ -804,17 +804,17 @@
               </article>
 
               <div class="col-md-4">
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/us-4.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/us-4.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/us-5.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
@@ -843,17 +843,17 @@
               </article>
 
               <div class="col-md-4">
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/world-4.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/world-4.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/world-5.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
@@ -886,17 +886,17 @@
               </article>
 
               <div class="col-md-4">
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-3 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/business-3.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-3 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/business-3.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/business-5.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
@@ -929,17 +929,17 @@
               </article>
 
               <div class="col-md-4">
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-3 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/tech-3.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/tech-5.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
 
-                <div class="border-bottom mt-2 pb-3">
+                <div class="border-bottom mt-2 pb-4 w-75">
                   <a href="#"><img class="float-left pr-3" src="images/tech-5.webp" alt="two presidents"></a>
                   <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                 </div>
@@ -971,17 +971,17 @@
                 </article>
 
                 <div class="col-md-4">
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-3 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/culture-3.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
 
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-4 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/culture-5.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
 
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-4 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/culture-5.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
@@ -1013,17 +1013,17 @@
                 </article>
 
                 <div class="col-md-4">
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-3 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/sports-3.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
 
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-4 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/sports-4.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
 
-                  <div class="border-bottom mt-2 pb-3">
+                  <div class="border-bottom mt-2 pb-4 w-75">
                     <a href="#"><img class="float-left pr-3" src="images/sports-5.webp" alt="two presidents"></a>
                     <a href="#"><p class="font-text-us">Candidate For Congress Says He Hopes Trump and Biden Both Die From COVID</p></a>
                   </div>
@@ -1075,7 +1075,7 @@
               <div class="row">
 
                 <div class="col-md-6">
-                  <img class="w-100 h-100" src="/images/newsletter-img.png" alt="newletter-pic">
+                  <img class="w-100 h-100" src="images/newsletter-img.png" alt="newletter-pic">
                 </div>
                 <form class="col-md-6 text-center" action="/">
                   <h3>THE STARTING 5</h3>
@@ -1102,7 +1102,7 @@
   <footer class="container-fluid pt-5 border-top w-100">
     <div class="border-bottom d-lg-flex justify-content-lg-between w-100">
       <div class="d-lg-flex align-items-start">
-        <a href="#"><img src="/images/footer-logo.png" alt="newsweek red logo"></a>
+        <a href="#"><img src="images/footer-logo.png" alt="newsweek red logo"></a>
         <p class="small-font text-secondary mt-2 ml-2 pt-2">© 2020 NEWSWEEK DIGITAL LLC</p>
       </div>
   
