fixed my turn section not showing the images

--- a/index.html
+++ b/index.html
@@ -473,17 +473,17 @@
               <div class="row">
               
                 <div class="col-md-4" >
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-img-1.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-img-1.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
 
                 <div class="col-md-4">
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-2.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-2.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
 
                 <div class="col-md-4">
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-3.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-3.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
 
@@ -491,17 +491,17 @@
 
                 <h1 class="story-h1 mt-3">CULTURE & TRAVEL</h1>
                 <div class="col-md-4" >
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-img-1.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-img-1.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
 
                 <div class="col-md-4">
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-2.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-2.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
 
                 <div class="col-md-4">
-                  <a href="#"><img class="d-block w-100 mb-2" src="/images/my-turn-pic-3.png" alt="small picture"></a>
+                  <a href="#"><img class="d-block w-100 mb-2" src="images/my-turn-pic-3.png" alt="small picture"></a>
                   <a href="#" class="font-p-my-turn">1We Live In A Two Storey Undergrouond Bunker'</a>
                 </div>
               </div>  
