fixed two images overlapping effect

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
               
               <div class="row">
                   
-                <div class="col-md-4 col-sm-12 mb-5 pb-5">
+                <div class="col-md-4 col-12 mb-5 pb-5 two-img">
                   <div class="col-sm-6 p-3 position-absolute">
                     <img class="img-fluid img-sub-1 position-absolute" src="images/subscribe-img-1.jpg" alt="magazine cover">
                     <img class="img-fluid img-sub-2 position-absolute" src="images/subscribe-img2.png" alt="magazine-cover-2">     
