fixed margin right issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <header>
 
-    <nav class="fixed-sm-top navbar bg-red-news nav-justified d-flex w-100">
+    <nav class="fixed-top navbar bg-red-news d-flex w-100">
       <div class="text-white smaller-none big-show flex-column ">
         <div class="text-white secondary-font">
           <i class="fas fa-cloud-sun"></i>
@@ -1046,8 +1046,8 @@
               
               <div class="row">
                   
-                <div class="col-md-4 mb-5 pb-5 two-img mx-auto">
-                  <div class="col-sm-6 p-3 position-absolute">
+                <div class="col-md-4 mb-5 pb-5 two-img">
+                  <div class="col-sm-6 p-3 position-absolute w-75">
                     <img class="img-fluid img-sub-1 position-absolute" src="images/subscribe-img-1.jpg" alt="magazine cover">
                     <img class="img-fluid img-sub-2 position-absolute" src="images/subscribe-img2.png" alt="magazine-cover-2">     
                   </div>
