--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
               
               <div class="row">
                   
-                <div class="col-6 col-md-6 col-lg-5 mr-lg-4 mb-5 pb-5 two-img mx-auto">
+                <div class="col-6 col-md-6 col-lg-5 mr-lg-4 mb-5 pb-5 two-img mx-auto w-100">
                   <!-- <div class="col-sm-6 col-md-6 p-3 position-relative w-100"> -->
                     <img class="img-fluid img-sub-1 position-absolute" src="images/subscribe-img-1.jpg" alt="magazine cover">
                     <img class="img-fluid img-sub-2 position-absolute" src="images/subscribe-img2.png" alt="magazine-cover-2">     
